kube-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sb-app
  namespace: bdf-exalab
  labels:
    app: sb-app
    env: dev
spec:
  selector:
    matchLabels:
      app: sb-app
  template:
    metadata:
      labels:
        app: sb-app
    spec:
      restartPolicy: Always
      containers:
      - name: sb-app
        image: bdf.artifactory.sofact.bdf.dns.eclair.local/sb-app:v1
        imagePullPolicy: Always
        resources:
          requests:	
            cpu: 300m
            memory: 512Mi
          limits:
            cpu: 300m
            memory: 512Mi
        ports:
        - containerPort: 8000
          name: sb-app
      - name: sb-app2
        image: bdf.artifactory.sofact.bdf.dns.eclair.local/sb-app:v2
        imagePullPolicy: Always
        resources:
          requests:	
            cpu: 300m
            memory: 512Mi
          limits:
            cpu: 300m
            memory: 512Mi
        ports:
        - containerPort: 8001
          name: sb-app2
