kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice
  labels:
    app: microservice
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    nodePort: 30080
  selector:
    app: microservice
