kube-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: microservice
spec:
  rules:
  - http:
    paths:
    - path: /
      backend:
        serviceName: microservice
        servicePort: 30080
